* Curve: Moderation buttons not properly aligned (forum.css, ie7.css) [Bug 3447]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8442 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/curve/css/forum.css
+++ b/Themes/curve/css/forum.css
@@ -236,6 +236,10 @@ table.table_list a.collapse
 {
 	padding-top: 1em;
 }
+#moderationbuttons
+{
+	overflow: hidden;
+}
 
 /* Poll question */
 #poll
