--- a/Themes/curve/css/ie7.css
+++ b/Themes/curve/css/ie7.css
@@ -35,10 +35,6 @@
 	margin-top: 8px;
 	clear: both;
 }
-#moderationbuttons
-{
-	overflow: hidden;
-}
 #content_section .pagesection
 {
 	height: 1%;
